--- a/LowesApp/app/src/main/res/layout/activity_main.xml
+++ b/LowesApp/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/colorPrimary">
+        android:background="#2196F3">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="265dp"
+            android:layout_height="157dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/lowes_logo"
+            tools:srcCompat="@drawable/lowelogo"
             tools:visibility="visible" />
 
     </RelativeLayout>
@@ -51,7 +51,7 @@
         android:padding="15dp">
 
         <Spinner
-            android:id="@+id/spinnerCountries"
+            android:id="@+id/spinnercountries"
             android:layout_width="120dp"
             android:layout_height="38dp"
             android:focusable="auto" />
