--- a/LowesApp/app/src/main/res/layout/activity_profile.xml
+++ b/LowesApp/app/src/main/res/layout/activity_profile.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:background="#FF2196F3"
-        app:srcCompat="@drawable/lowes_logo" />
+        tools:srcCompat="@drawable/lowelogo" />
 
     <Button
         android:id="@+id/buttonLogout"
