--- a/LowesApp/app/src/main/res/layout/activity_verify_phone.xml
+++ b/LowesApp/app/src/main/res/layout/activity_verify_phone.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2196F3"
     tools:context=".VerifyPhoneActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/colorPrimary">
+        android:background="#2196F3">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_logo" />
+            android:layout_width="265dp"
+            android:layout_height="160dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/lowelogo" />
 
     </RelativeLayout>
 
@@ -38,7 +38,7 @@
         android:layout_marginTop="10dp"
         android:text="Please wait a while, we are setting things!"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="#FFFF" />
 
     <TextView
         android:id="@+id/textView1"
@@ -46,11 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/welcome_msg"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
         android:text="Automatically detecting the OTP sent on your mobile number."
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="#FFFF" />
 
     <EditText
         android:id="@+id/editTextCode"
@@ -58,9 +58,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView1"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20sp"
         android:digits="0123456789"
         android:hint="enter code"
-        android:maxLength="6" />
+        android:maxLength="6"
+        android:textColor="#FFFF"
+        android:textColorHint="#FFFF" />
 
 
     <Button
@@ -70,7 +73,7 @@
         android:layout_below="@id/editTextCode"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
+        android:background="#F44336"
         android:text="Sign In"
         android:textAllCaps="false"
         android:textColor="#ffffff" />
