--- a/LowesApp/app/src/main/res/layout/main.xml
+++ b/LowesApp/app/src/main/res/layout/main.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/enter_new_item_here"
+            android:hint="enter_new_item_here"
             android:imeActionId="@+id/btnAddItem"
             android:imeActionLabel="@string/add"
             android:imeOptions="actionGo|flagNoExtractUi"
@@ -65,7 +65,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/PayButton"
         android:layout_width="match_parent"
         android:layout_height="41dp"
         android:layout_margin="5sp"
